// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppFiltersCollection should match a snapshot for mobile desktop 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div>
        <mock-styled.div
          classname="mock-css.
  flex-direction: column;
"
        >
          <mock-styled.span
            classname="mock-css.
  margin-bottom: 0.75rem;
"
            style="font-size: 5em;"
          >
            <svg
              style="font-size: 5em;"
            />
          </mock-styled.span>
          <mock-styled.div
            classname="mock-css.
  flex-direction: column;
 mock-css.
  justify-content: center;
"
          >
            <mock-styled.mock-styled.h2>
              Reapit Developed Apps
            </mock-styled.mock-styled.h2>
            <mock-styled.mock-styled.p>
              Lorem ipsum dolor sit amet, consectetur adip
            </mock-styled.mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div>
      <mock-styled.div
        classname="mock-css.
  flex-direction: column;
"
      >
        <mock-styled.span
          classname="mock-css.
  margin-bottom: 0.75rem;
"
          style="font-size: 5em;"
        >
          <svg
            style="font-size: 5em;"
          />
        </mock-styled.span>
        <mock-styled.div
          classname="mock-css.
  flex-direction: column;
 mock-css.
  justify-content: center;
"
        >
          <mock-styled.mock-styled.h2>
            Reapit Developed Apps
          </mock-styled.mock-styled.h2>
          <mock-styled.mock-styled.p>
            Lorem ipsum dolor sit amet, consectetur adip
          </mock-styled.mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppFiltersCollection should match a snapshot for mobile mobile 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div>
        <mock-styled.div
          classname="mock-css.
  flex-direction: column;
"
        >
          <mock-styled.span
            classname="mock-css.
  margin-bottom: 0.75rem;
"
            style="font-size: 3.75em;"
          >
            <svg
              style="font-size: 3.75em;"
            />
          </mock-styled.span>
          <mock-styled.div
            classname="mock-css.
  flex-direction: column;
 mock-css.
  justify-content: center;
"
          >
            <mock-styled.mock-styled.h2>
              Reapit Developed Apps
            </mock-styled.mock-styled.h2>
            <mock-styled.mock-styled.p>
              Lorem ipsum dolor sit amet, consectetur adip
            </mock-styled.mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div>
      <mock-styled.div
        classname="mock-css.
  flex-direction: column;
"
      >
        <mock-styled.span
          classname="mock-css.
  margin-bottom: 0.75rem;
"
          style="font-size: 3.75em;"
        >
          <svg
            style="font-size: 3.75em;"
          />
        </mock-styled.span>
        <mock-styled.div
          classname="mock-css.
  flex-direction: column;
 mock-css.
  justify-content: center;
"
        >
          <mock-styled.mock-styled.h2>
            Reapit Developed Apps
          </mock-styled.mock-styled.h2>
          <mock-styled.mock-styled.p>
            Lorem ipsum dolor sit amet, consectetur adip
          </mock-styled.mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppFiltersCollection should match a snapshot for mobile superWidescreen 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div>
        <mock-styled.div
          classname="mock-css.
  flex-direction: column;
"
        >
          <mock-styled.span
            classname="mock-css.
  margin-bottom: 0.75rem;
"
            style="font-size: 5em;"
          >
            <svg
              style="font-size: 5em;"
            />
          </mock-styled.span>
          <mock-styled.div
            classname="mock-css.
  flex-direction: column;
 mock-css.
  justify-content: center;
"
          >
            <mock-styled.mock-styled.h2>
              Reapit Developed Apps
            </mock-styled.mock-styled.h2>
            <mock-styled.mock-styled.p>
              Lorem ipsum dolor sit amet, consectetur adip
            </mock-styled.mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div>
      <mock-styled.div
        classname="mock-css.
  flex-direction: column;
"
      >
        <mock-styled.span
          classname="mock-css.
  margin-bottom: 0.75rem;
"
          style="font-size: 5em;"
        >
          <svg
            style="font-size: 5em;"
          />
        </mock-styled.span>
        <mock-styled.div
          classname="mock-css.
  flex-direction: column;
 mock-css.
  justify-content: center;
"
        >
          <mock-styled.mock-styled.h2>
            Reapit Developed Apps
          </mock-styled.mock-styled.h2>
          <mock-styled.mock-styled.p>
            Lorem ipsum dolor sit amet, consectetur adip
          </mock-styled.mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppFiltersCollection should match a snapshot for mobile tablet 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div>
        <mock-styled.div
          classname="mock-css.
  flex-direction: column;
"
        >
          <mock-styled.span
            classname="mock-css.
  margin-bottom: 0.75rem;
"
            style="font-size: 5em;"
          >
            <svg
              style="font-size: 5em;"
            />
          </mock-styled.span>
          <mock-styled.div
            classname="mock-css.
  flex-direction: column;
 mock-css.
  justify-content: center;
"
          >
            <mock-styled.mock-styled.h2>
              Reapit Developed Apps
            </mock-styled.mock-styled.h2>
            <mock-styled.mock-styled.p>
              Lorem ipsum dolor sit amet, consectetur adip
            </mock-styled.mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div>
      <mock-styled.div
        classname="mock-css.
  flex-direction: column;
"
      >
        <mock-styled.span
          classname="mock-css.
  margin-bottom: 0.75rem;
"
          style="font-size: 5em;"
        >
          <svg
            style="font-size: 5em;"
          />
        </mock-styled.span>
        <mock-styled.div
          classname="mock-css.
  flex-direction: column;
 mock-css.
  justify-content: center;
"
        >
          <mock-styled.mock-styled.h2>
            Reapit Developed Apps
          </mock-styled.mock-styled.h2>
          <mock-styled.mock-styled.p>
            Lorem ipsum dolor sit amet, consectetur adip
          </mock-styled.mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppFiltersCollection should match a snapshot for mobile widescreen 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div>
        <mock-styled.div
          classname="mock-css.
  flex-direction: column;
"
        >
          <mock-styled.span
            classname="mock-css.
  margin-bottom: 0.75rem;
"
            style="font-size: 5em;"
          >
            <svg
              style="font-size: 5em;"
            />
          </mock-styled.span>
          <mock-styled.div
            classname="mock-css.
  flex-direction: column;
 mock-css.
  justify-content: center;
"
          >
            <mock-styled.mock-styled.h2>
              Reapit Developed Apps
            </mock-styled.mock-styled.h2>
            <mock-styled.mock-styled.p>
              Lorem ipsum dolor sit amet, consectetur adip
            </mock-styled.mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div>
      <mock-styled.div
        classname="mock-css.
  flex-direction: column;
"
      >
        <mock-styled.span
          classname="mock-css.
  margin-bottom: 0.75rem;
"
          style="font-size: 5em;"
        >
          <svg
            style="font-size: 5em;"
          />
        </mock-styled.span>
        <mock-styled.div
          classname="mock-css.
  flex-direction: column;
 mock-css.
  justify-content: center;
"
        >
          <mock-styled.mock-styled.h2>
            Reapit Developed Apps
          </mock-styled.mock-styled.h2>
          <mock-styled.mock-styled.p>
            Lorem ipsum dolor sit amet, consectetur adip
          </mock-styled.mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
